--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,10 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
+title:              Korean-NLP-Visual
+email:              
+description:        Open-source project that adds visualization function to the existing open-source project for Python developers' Korean natural language processing.
+author:             
 baseurl:            "/Korean-NLP-Visual"
 url:                "https://sbj6364.github.io/Korean-NLP-Visual/"
 
-# Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
-instagram_username:  
-linkedin_username:
-
-# Add your google-analytics ID here to activate google analytics
-google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
 
 # Build settings
 markdown:           kramdown
