feat : Complete 1.0.0 Update

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              Korean-NLP-Visual
+title:              Korean NLP Visual
 email:              sbjun1126@gmail.com
 description:        Open-source project for Korean NLP including visualization function
 author:             
