--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              Korean NLP Visual
 email:              sbjun1126@gmail.com
 description:        Open-source project for Korean NLP including visualization function
-author:             
+author:             OSS Group5
 baseurl:            "/Korean-NLP-Visual"
 url:                "https://sbj6364.github.io/Korean-NLP-Visual/"
 github_username:    sbj6364
